--- a/sandbox/build.gradle
+++ b/sandbox/build.gradle
@@ -1,3 +1,3 @@
 apply plugin: 'java'
 apply plugin: 'application'
-mainClassName = "MyFirstProgram"
+mainClassName = "src.main.java.ru.ivfominy.MyFirstProgram"
