--- a/addressbook-web-tests/build.gradle
+++ b/addressbook-web-tests/build.gradle
@@ -1,6 +1,4 @@
 apply plugin: 'java'
-apply plugin: 'application'
-mainClassName = "ru.ivfominy.MyFirstProgram"
 
 repositories {
     mavenCentral()
@@ -8,4 +6,5 @@ repositories {
 
 dependencies {
     implementation 'org.testng:testng:7.0.0'
+    implementation 'org.seleniumhq.selenium:selenium-java:4.0.0-alpha-3'
 }
