--- a/addressbook-web-tests/build.gradle
+++ b/addressbook-web-tests/build.gradle
@@ -7,4 +7,5 @@ repositories {
 dependencies {
     implementation 'org.testng:testng:7.0.0'
     implementation 'org.seleniumhq.selenium:selenium-java:4.0.0-alpha-3'
+    implementation 'org.hamcrest:java-hamcrest:2.0.0.0'
 }
